# ESO_internship

./: .gitignore  README.md  science_requirements.txt
config/: PynPoint_config.ini
notebooks/: view_GHOST_screens_24.ipynb
src/: SLM_process.py  functions.py  post_processing.py
src/pipeline_ADI/: pyproject.toml
src/pipeline_ADI/configs/: default_values.yaml  ghost.yaml  template.yaml
src/pipeline_ADI/contrast_pipeline/: cli.py  functions_ADI.py  pca_utils.py  pipeline.py
