[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contrast-pipeline"
version = "0.1.0"

dependencies = [
    "pyyaml",
    "numpy",
    "pandas",
]

[project.scripts]
contrast-run = "contrast_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contrast_pipeline*"]
